@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: lp.man,v 1.2 2000/07/20 17:10:56 mike Exp $"
+.\" "$Id: lp.man,v 1.3 2000/11/11 19:56:23 mike Exp $"
 .\"
 .\"   lp/cancel man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -21,7 +21,7 @@
 .\"       EMail: cups-info@cups.org
 .\"         WWW: http://www.cups.org
 .\"
-.TH lp 1 "Common UNIX Printing System" "9 September 1999" "Easy Software Products"
+.TH lp 1 "Common UNIX Printing System" "11 November 2000" "Easy Software Products"
 .SH NAME
 lp \- print files
 .br
@@ -30,8 +30,10 @@ cancel \- cancel jobs
 .B lp
 [ \-c ] [ \-d
 .I destination
-] [ -h
+] [ \-h
 .I server
+] [ \-i
+.I job-id
 ] [ \-m ] [ \-n
 .I num-copies
 [ \-o
@@ -40,9 +42,13 @@ cancel \- cancel jobs
 .I priority
 ] [ \-s ] [ \-t
 .I title
+] [ \-H
+.I handling
+] [ \-P
+.I page-list
 ] [
 .I file(s)
-] 
+]
 .br
 .B cancel
 [ \-a ] [ -h
@@ -71,9 +77,13 @@ Prints files to the named printer.
 Specifies the print server hostname. The default is "localhost" or the value
 of the CUPS_SERVER environment variable.
 .TP 5
+\-i \fIjob-id\fR
+.br
+Specifies an existing job to modify.
+.TP 5
 \-m
 .br
-Send email when the job is completed (ignored in CUPS 1.0.)
+Send email when the job is completed (not supported CUPS 1.1.)
 .TP 5
 \-n \fIcopies\fR
 .br
@@ -95,12 +105,25 @@ Do not report the resulting job IDs (silent mode.)
 \-t \fIname\fR
 .br
 Sets the job name.
+.TP 5
+\-H \fIhandling\fR
+.br
+Specifies when the job should be printed. A value of
+\fIimmediate\fR will print the file immediately, a value of
+\fIhold\fR will hold the job indefinitely, and a time value
+(HH:MM) will hold the job until the specified time. Use a value
+of \fIresume\fR with the \fI-i\fR option to resume a held job.
+.TP 5
+\-P \fIpage-list\fR
+.br
+Specifies which pages to print in the document. The list can contain a
+list of numbers and ranges (#-#) separated by commas (e.g. 1,3-5,16).
 .SH COMPATIBILITY
 Unlike the System V printing system, CUPS allows printer names to contain
 any printable character except SPACE and TAB. Also, printer and class names are
 \fBnot\fR case-sensitive. 
 .LP
-The "m" option is not functional in CUPS 1.0.
+The "m" option is not functional in CUPS 1.1.
 .SH SEE ALSO
 lpstat(1),
 CUPS Software Users Manual,
@@ -108,5 +131,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2000 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: lp.man,v 1.2 2000/07/20 17:10:56 mike Exp $".
+.\" End of "$Id: lp.man,v 1.3 2000/11/11 19:56:23 mike Exp $".
 .\"
